spacing fixed on search results

--- a/src/index.css
+++ b/src/index.css
@@ -281,12 +281,21 @@ button{
   
 }
 
-.seacrh-image{
-  max-height: 150px;
+
+.image-div{
+  width: 100%;
+  max-height: 140px;
+}
+
+.search-image{
+  object-fit: cover;
+  
+  max-height: 140px;
 }
 
 .searched-row{
   border-bottom: 1px solid rgb(169, 174, 179);
+  max-height: 150px;
 }
 
 /* .left-search{
